--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ input::placeholder {
   padding: 0.2em 0.4em;
 }
 
-.Posts-post-button {
+.PostsList-post-button {
   position: absolute;
   right: 0;
   top: -30px;
@@ -104,7 +104,7 @@ input::placeholder {
   position: absolute;
   right: 10px;
   top: 10px;
-  padding: 0.5em 0.5em;
+  padding: 0.5em;
   font-size: 0.9em;
   color: gray;
   background-color: transparent;
@@ -140,7 +140,7 @@ input::placeholder {
   position: absolute;
   right: 0;
   top: 0;
-  padding: 0.5em 0.5em;
+  padding: 0.5em;
   font-size: 0.9em;
   color: gray;
   background-color: transparent;
@@ -163,6 +163,47 @@ input::placeholder {
   padding: 0.2em 0.4em;
   background-color: #B84B4E; 
 }
+
+.EditPost {
+  position: relative;
+  padding: 10px;
+  background-color: gray;
+}
+
+.EditPost-image {
+  border-radius: 5px 5px 0 0;  
+}
+
+.EditPost-close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 0.7em;
+  font-size: 0.9em;
+  color: gray;
+  background-color: transparent;
+}
+
+.EditPost-input {
+  position: absolute;
+  left: 15%;
+  top: 22.5%;
+  width: 70%;
+  padding: 0.3em 1em;
+}
+
+.EditPost-save {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5em 0.5em 0.4em 0;  
+  background-color: #F5F6F8;
+  border-radius: 0 0 5px 5px;
+}
+
+.EditPost-save-button {
+  padding: 0.2em 1em;
+}
+
 
 .Fetch-waiting {
   position: absolute;
